--- a/pub/cfmem.yaml
+++ b/pub/cfmem.yaml
@@ -6,68 +6,71 @@ log-level: info
 external-controller: 0.0.0.0:9090
 proxies:
   - &id001
-    name: 🇺🇸_US_美国->🇮🇳_IN_印度_1
-    type: vmess
-    server: hk.wish.ml
-    port: 2052
-    cipher: auto
-    uuid: c286daa2-59de-455c-8de8-ec032b6ce2e8
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: in4.wish.ml
-  - &id002
-    name: 🇺🇸_US_美国->🇮🇳_IN_印度_2
-    type: vmess
-    server: 172.67.164.78
-    port: 2052
-    cipher: auto
-    uuid: c286daa2-59de-455c-8de8-ec032b6ce2e8
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: in3.wish.ml
-  - &id003
-    name: 🇦🇱_AL_阿尔巴尼亚
-    type: ss
-    server: 109.104.152.126
-    port: 51122
-    password: dongtaiwang.com
-    cipher: aes-256-gcm
-  - &id004
-    name: 🇺🇸_US_美国_1
-    type: trojan
-    server: 23.142.200.175
-    port: 443
-    udp: true
-    password: 27876_t7d7f4e3f
-    skip-cert-verify: true
-    network: tcp
-  - &id005
-    name: 🇺🇸_US_美国_2
-    type: ss
-    server: 205.134.180.139
-    port: 443
-    password: lWaGPVFjmnag
-    cipher: chacha20-ietf-poly1305
-  - &id006
-    name: 🇨🇳_CN_中国->🇺🇸_US_美国
+    name: 🇨🇳_CN_中国->🇺🇸_US_美国_1
     type: trojan
     server: 36.151.195.48
-    port: 20344
+    port: 4603
     udp: true
     password: TNDSJfNv
     skip-cert-verify: true
     network: tcp
-  - &id007
+  - &id002
+    name: 🇺🇸_US_美国_1
+    type: vmess
+    server: cfcdn1.sanfencdn9.com
+    port: 2095
+    cipher: auto
+    uuid: e83f27c4-b1cb-4311-907c-ea16d32348e1
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /video/qYZue4zaWS
+      headers:
+        host: us82pRzxDMb.fzbqfrse.xyz
+  - &id003
+    name: 🇺🇸_US_美国_2
+    type: trojan
+    server: 95.164.33.62
+    port: 443
+    udp: true
+    password: 0b1371aa-649d-41dc-9126-338c87936500
+    sni: sourceforge.net
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /websocket
+      headers:
+        host: se1.trojanvpn.de
+  - &id004
+    name: 🇨🇳_CN_中国->🇺🇸_US_美国_2
+    type: vmess
+    server: 103.184.45.191
+    port: 2095
+    cipher: auto
+    uuid: b3c76f0e-f2c6-4518-9ddc-b21b3339d550
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /b3c76f0e-f2c6-4518-9ddc-b21b3339d550-vm
+      headers:
+        host: rn.yicanny.com
+  - &id005
+    name: 🇷🇺_RU_俄罗斯联邦
+    type: vmess
+    server: 45.136.245.240
+    port: 12910
+    cipher: auto
+    uuid: 8259cb1c-dd6c-4739-9c88-af550d977525
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    servername: 22.lwdh.us
+    network: ws
+  - &id006
     name: 🇺🇸_US_美国_3
     type: vmess
     server: russia.com
@@ -82,25 +85,28 @@ proxies:
       path: /api/v3/download.getFile
       headers:
         host: sssub.v2.001.ssrsub.com
+  - &id007
+    name: 🇺🇸_US_美国_4
+    type: ss
+    server: 205.134.180.139
+    port: 443
+    password: lWaGPVFjmnag
+    cipher: chacha20-ietf-poly1305
   - &id008
-    name: 🇺🇸_US_美国->🇮🇳_IN_印度_3
+    name: 🇨🇳_CN_中国->🇺🇸_US_美国_3
     type: vmess
-    server: 104.17.156.224
-    port: 2052
+    server: 183.240.179.207
+    port: 30013
     cipher: auto
-    uuid: c286daa2-59de-455c-8de8-ec032b6ce2e8
+    uuid: 5bd5899a-4b78-4d75-8570-4d21b43422c4
     alterId: 0
     tls: false
     skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: in4.wish.ml
+    network: tcp
   - &id009
     name: 🇬🇧_GB_英国_1
     type: ss
-    server: 212.102.53.196
+    server: 212.102.53.195
     port: 443
     password: shadowsocks
     cipher: aes-128-gcm
@@ -112,159 +118,62 @@ proxies:
     password: shadowsocks
     cipher: aes-128-gcm
   - &id011
-    name: 🇵🇱_PL_波兰_1
-    type: ss
-    server: 51.77.53.200
-    port: 6697
-    password: TEzjfAYq2IjtuoS
-    cipher: aes-256-gcm
+    name: 🇨🇳_CN_中国->🇺🇸_US_美国_4
+    type: vmess
+    server: data-us-v1.shwjfkw.cn
+    port: 20401
+    cipher: auto
+    uuid: b1478e24-4916-3abe-8f17-15931012ecbe
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /debian
+      headers:
+        host: data-us-v1.shwjfkw.cn
   - &id012
-    name: 🇵🇱_PL_波兰_2
+    name: 🇳🇱_NL_荷兰
     type: ss
-    server: 51.77.53.200
-    port: 8119
-    password: cdBIDV42DCwnfIN
-    cipher: aes-256-gcm
+    server: 103.229.81.118
+    port: 443
+    password: 1YPQ1ZimzQp2fi4IpnAH5i
+    cipher: chacha20-ietf-poly1305
   - &id013
-    name: 🇺🇸_US_美国_4
+    name: 🇺🇸_US_美国_5
     type: ss
-    server: 89.117.109.97
+    server: 184.170.241.194
     port: 443
-    password: rhnAUMfOWIgjT917yYCG7u
-    cipher: chacha20-ietf-poly1305
+    password: shadowsocks
+    cipher: aes-128-cfb
   - &id014
-    name: 🇵🇱_PL_波兰_3
-    type: ss
-    server: 51.77.53.200
-    port: 8118
-    password: cdBIDV42DCwnfIN
-    cipher: aes-256-gcm
+    name: 🇺🇸_US_美国_6
+    type: vmess
+    server: cfcdn1.sanfencdn9.com
+    port: 2052
+    cipher: auto
+    uuid: e83f27c4-b1cb-4311-907c-ea16d32348e1
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /video/GQ2qE5Us9g
+      headers:
+        host: tw1bQiWSE4x.fzbqfrse.xyz
   - &id015
-    name: 🇵🇱_PL_波兰_4
-    type: ss
-    server: 51.77.53.200
-    port: 7002
-    password: RexnBgU7EV5ADxG
-    cipher: aes-256-gcm
-  - &id016
-    name: 🇵🇱_PL_波兰_5
-    type: ss
-    server: 51.77.53.200
-    port: 7306
-    password: FoOiGlkAA9yPEGP
-    cipher: aes-256-gcm
-  - &id017
-    name: 🇵🇱_PL_波兰_6
-    type: ss
-    server: 51.77.53.200
-    port: 5001
-    password: Y6R9pAtvxxzmGC
-    cipher: aes-256-gcm
-  - &id018
-    name: 🇵🇱_PL_波兰_7
-    type: ss
-    server: 51.77.53.200
-    port: 5004
-    password: g5MeD6Ft3CWlJId
-    cipher: aes-256-gcm
-  - &id019
-    name: 🇵🇱_PL_波兰_8
-    type: ss
-    server: 51.77.53.200
-    port: 6379
-    password: zDNVedRFPQexG9v
-    cipher: aes-256-gcm
-  - &id020
-    name: 🇵🇱_PL_波兰_9
-    type: ss
-    server: 51.77.53.200
-    port: 8881
-    password: kDWvXYZoTBcGkC4
-    cipher: aes-256-gcm
-  - &id021
-    name: 🇵🇱_PL_波兰_10
-    type: ss
-    server: 51.77.53.200
-    port: 8091
-    password: PCnnH6SQSnfoS27
-    cipher: aes-256-gcm
-  - &id022
-    name: 🇬🇧_GB_英国_3
-    type: ss
-    server: 212.102.53.193
+    name: 🇺🇸_US_美国_7
+    type: vmess
+    server: 23.154.136.2
     port: 443
-    password: shadowsocks
-    cipher: aes-128-gcm
-  - &id023
-    name: 🇬🇧_GB_英国_4
-    type: ss
-    server: 212.102.53.195
-    port: 443
-    password: shadowsocks
-    cipher: aes-128-gcm
-  - &id024
-    name: 🇵🇱_PL_波兰_11
-    type: ss
-    server: 51.77.53.200
-    port: 2375
-    password: faBAoD54k87UJG7
-    cipher: aes-256-gcm
-  - &id025
-    name: 🇵🇱_PL_波兰_12
-    type: ss
-    server: 51.77.53.200
-    port: 6679
-    password: TEzjfAYq2IjtuoS
-    cipher: aes-256-gcm
-  - &id026
-    name: 🇵🇱_PL_波兰_13
-    type: ss
-    server: 51.77.53.200
-    port: 8009
-    password: XKFKl2rULjIp74
-    cipher: aes-256-gcm
-  - &id027
-    name: 🇵🇱_PL_波兰_14
-    type: ss
-    server: 51.77.53.200
-    port: 9102
-    password: e4FCWrgpkji3QY
-    cipher: aes-256-gcm
-  - &id028
-    name: 🇵🇱_PL_波兰_15
-    type: ss
-    server: 51.77.53.200
-    port: 7307
-    password: FoOiGlkAA9yPEGP
-    cipher: aes-256-gcm
-  - &id029
-    name: 🇵🇱_PL_波兰_16
-    type: ss
-    server: 51.77.53.200
-    port: 8000
-    password: KixLvKzwjekG00rm
-    cipher: aes-256-gcm
-  - &id030
-    name: 🇵🇱_PL_波兰_17
-    type: ss
-    server: 51.77.53.200
-    port: 4444
-    password: pKEW8JPByTVTLtM
-    cipher: aes-256-gcm
-  - &id031
-    name: 🇵🇱_PL_波兰_18
-    type: ss
-    server: 51.77.53.200
-    port: 8882
-    password: kDWvXYZoTBcGkC4
-    cipher: aes-256-gcm
-  - &id032
-    name: 🇷🇺_RU_俄罗斯联邦
-    type: ss
-    server: 94.228.165.178
-    port: 58176
-    password: afKAHp1VfRWZu91LIi9o0D
-    cipher: chacha20-ietf-poly1305
+    cipher: auto
+    uuid: 03fcc618-b93d-6796-6aed-8a38c975d581
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /linkvws
 proxy-groups:
   - name: PROXY
     type: select
@@ -306,23 +215,6 @@ proxy-groups:
       - *id013
       - *id014
       - *id015
-      - *id016
-      - *id017
-      - *id018
-      - *id019
-      - *id020
-      - *id021
-      - *id022
-      - *id023
-      - *id024
-      - *id025
-      - *id026
-      - *id027
-      - *id028
-      - *id029
-      - *id030
-      - *id031
-      - *id032
   - name: LOAD-BALANCE
     type: load-balance
     url: http://www.gstatic.com/generate_204
@@ -343,23 +235,6 @@ proxy-groups:
       - *id013
       - *id014
       - *id015
-      - *id016
-      - *id017
-      - *id018
-      - *id019
-      - *id020
-      - *id021
-      - *id022
-      - *id023
-      - *id024
-      - *id025
-      - *id026
-      - *id027
-      - *id028
-      - *id029
-      - *id030
-      - *id031
-      - *id032
   - name: SELECT
     type: select
     proxies:
@@ -378,23 +253,6 @@ proxy-groups:
       - *id013
       - *id014
       - *id015
-      - *id016
-      - *id017
-      - *id018
-      - *id019
-      - *id020
-      - *id021
-      - *id022
-      - *id023
-      - *id024
-      - *id025
-      - *id026
-      - *id027
-      - *id028
-      - *id029
-      - *id030
-      - *id031
-      - *id032
 rules:
   - RULE-SET,applications,DIRECT
   - DOMAIN,clash.razord.top,DIRECT
