--- a/pub/cfmem.yaml
+++ b/pub/cfmem.yaml
@@ -6,139 +6,35 @@ log-level: info
 external-controller: 0.0.0.0:9090
 proxies:
   - &id001
-    name: 🇺🇸_US_美国_1
-    type: vmess
-    server: 148.135.40.190
-    port: 8080
-    cipher: auto
-    uuid: f6c4905b-0308-4164-b1ad-4157531a8378
-    alterId: 0
-    tls: false
+    name: 🇺🇸_US_美国->🇦🇺_AU_澳大利亚_1
+    type: trojan
+    server: 104.20.18.168
+    port: 443
+    udp: true
+    password: 50e10abd-3920-42a6-ad0c-6ec731d8c826
+    sni: golinkwuxian.top
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: /index?ed=2560
+      path: /apple
+      headers:
+        host: 555.golinkwuxian.top
   - &id002
-    name: 🇨🇳_CN_中国->🇺🇸_US_美国_1
-    type: vmess
-    server: vip3.niuniupremium.xyz
-    port: 16928
-    cipher: auto
-    uuid: 2ab54438-8af9-3711-bf1a-676fcc144586
-    alterId: 0
-    tls: false
+    name: 🇺🇸_US_美国->🇦🇺_AU_澳大利亚_2
+    type: trojan
+    server: 104.20.19.168
+    port: 443
+    udp: true
+    password: 50e10abd-3920-42a6-ad0c-6ec731d8c826
+    sni: golinkwuxian.top
     skip-cert-verify: true
-    servername: vip3.niuniupremium.xyz
     network: ws
     ws-opts:
-      path: /v2ray
+      path: /apple
+      headers:
+        host: 555.golinkwuxian.top
   - &id003
-    name: 🇩🇪_DE_德国
-    type: vmess
-    server: de-frankfurt-oracle-b26cf5.ip1.shop
-    port: 45103
-    cipher: auto
-    uuid: 6d3404ef-27c6-48de-a83a-8ac6488760b4
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    servername: oracle-de-02.t3csyun.buzz
-    network: ws
-    ws-opts:
-      path: /de2
-  - &id004
-    name: 🇨🇳_CN_中国->🇩🇪_DE_德国
-    type: ss
-    server: 5.forlive.live
-    port: 60033
-    password: 4c0e5766-0d17-318b-bff2-046c14cb27b5
-    cipher: chacha20-ietf-poly1305
-  - &id005
-    name: 🇺🇸_US_美国_2
-    type: vmess
-    server: us-sanfrancisco-02.t3csyun.buzz
-    port: 34053
-    cipher: auto
-    uuid: 6d3404ef-27c6-48de-a83a-8ac6488760b4
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    servername: us-sanfrancisco-02.t3csyun.buzz
-    network: ws
-    ws-opts:
-      path: /us2
-  - &id006
-    name: 🇷🇺_RU_俄罗斯联邦_1
-    type: vmess
-    server: 45.147.200.170
-    port: 35972
-    cipher: auto
-    uuid: 6a2afda8-8798-434c-8964-1deb4e7655a5
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: tcp
-  - &id007
-    name: 🇺🇸_US_美国_3
-    type: vmess
-    server: hk.wish.ml
-    port: 2052
-    cipher: auto
-    uuid: c286daa2-59de-455c-8de8-ec032b6ce2e8
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: us6_0.wish.ml
-  - &id008
-    name: 🇺🇸_US_美国->🇮🇳_IN_印度_1
-    type: vmess
-    server: 172.67.164.78
-    port: 2052
-    cipher: auto
-    uuid: c286daa2-59de-455c-8de8-ec032b6ce2e8
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: in3.wish.ml
-  - &id009
-    name: 🇷🇺_RU_俄罗斯联邦_2
-    type: vmess
-    server: 45.136.245.240
-    port: 12910
-    cipher: auto
-    uuid: 8259cb1c-dd6c-4739-9c88-af550d977525
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    servername: 22.lwdh.us
-    network: ws
-    ws-opts:
-      path: /
-  - &id010
-    name: 🇺🇸_US_美国->🇮🇳_IN_印度_2
-    type: vmess
-    server: 104.17.156.224
-    port: 2052
-    cipher: auto
-    uuid: c286daa2-59de-455c-8de8-ec032b6ce2e8
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: in4.wish.ml
-  - &id011
-    name: 🇺🇸_US_美国_4
+    name: 🇺🇸_US_美国_1
     type: vmess
     server: 104.16.38.71
     port: 2052
@@ -152,22 +48,153 @@ proxies:
       path: /
       headers:
         host: us6_0.wish.ml
-  - &id012
-    name: 🇺🇸_US_美国_5
-    type: ss
-    server: 205.134.180.139
+  - &id004
+    name: 🇺🇸_US_美国->🇮🇳_IN_印度_1
+    type: vmess
+    server: 104.17.156.224
+    port: 2052
+    cipher: auto
+    uuid: c286daa2-59de-455c-8de8-ec032b6ce2e8
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: in4.wish.ml
+  - &id005
+    name: 🇺🇸_US_美国_2
+    type: vmess
+    server: hk.wish.ml
+    port: 2052
+    cipher: auto
+    uuid: c286daa2-59de-455c-8de8-ec032b6ce2e8
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: us6_0.wish.ml
+  - &id006
+    name: 🇺🇸_US_美国_3
+    type: vmess
+    server: 107.173.146.129
+    port: 80
+    cipher: auto
+    uuid: 5820093a-bb7d-4e15-8575-1a529f2d8282
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    servername: 107.173.146.129
+    network: ws
+    ws-opts:
+      path: /
+  - &id007
+    name: 🇺🇸_US_美国->🇨🇦_CA_加拿大
+    type: vmess
+    server: cdncdncdncdn.784654.xyz
+    port: 2052
+    cipher: auto
+    uuid: 8c8dabbc-93a6-44ad-b878-0d980fa249d1
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /index?ed=2048
+      headers:
+        host: ca-cfcdn.aikunapp.com
+  - &id008
+    name: 🇬🇧_GB_英国
+    type: trojan
+    server: 3.8.65.235
+    port: 22222
+    udp: true
+    password: telegram-id-directvpn
+    sni: trojan.burgerip.co.uk
+    skip-cert-verify: true
+    network: tcp
+    alpn:
+      - http/1.1
+  - &id009
+    name: 🇺🇸_US_美国->🇦🇺_AU_澳大利亚_3
+    type: trojan
+    server: c5.wuxianliulianng.xyz
     port: 443
-    password: lWaGPVFjmnag
-    cipher: chacha20-ietf-poly1305
-  - &id013
-    name: 🇺🇸_US_美国_6
-    type: ss
-    server: 38.114.123.12
-    port: 20001
-    password: 🍄🍅🛦🍆🍇.🍈🧛.🍉
-    cipher: chacha20-ietf-poly1305
-  - &id014
+    udp: true
+    password: 50e10abd-3920-42a6-ad0c-6ec731d8c826
+    sni: golinkwuxian.top
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /apple
+      headers:
+        host: 555.golinkwuxian.top
+  - &id010
+    name: 🇺🇸_US_美国_4
+    type: vmess
+    server: russia.com
+    port: 2095
+    cipher: auto
+    uuid: 4b05abf5-c68d-4ffc-915f-add2f3786dca
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /api/v3/download.getFile
+      headers:
+        host: sssub.v2.001.ssrsub.com
+  - &id011
+    name: 🇺🇸_US_美国_5
+    type: vmess
+    server: 172.67.130.140
+    port: 2082
+    cipher: auto
+    uuid: 112ac36f-3f53-4e26-8371-d25c028e1b9a
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: s1c.v2.v001sss.xyz
+  - &id012
     name: 🇺🇸_US_美国->🇫🇷_FR_法国_1
+    type: vmess
+    server: s1c.v2.v001sss.xyz
+    port: 2082
+    cipher: auto
+    uuid: 112ac36f-3f53-4e26-8371-d25c028e1b9a
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: s1c.v2.v001sss.xyz
+  - &id013
+    name: 🇺🇸_US_美国->🇮🇳_IN_印度_2
+    type: vmess
+    server: 172.67.164.78
+    port: 2052
+    cipher: auto
+    uuid: c286daa2-59de-455c-8de8-ec032b6ce2e8
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: in3.wish.ml
+  - &id014
+    name: 🇺🇸_US_美国->🇫🇷_FR_法国_2
     type: vmess
     server: 104.21.8.157
     port: 2082
@@ -182,133 +209,59 @@ proxies:
       headers:
         host: s1c.v2.v001sss.xyz
   - &id015
-    name: 🇺🇸_US_美国_7
-    type: trojan
-    server: 23.142.200.175
-    port: 443
-    udp: true
-    password: 27876_t7d7f4e3f
-    skip-cert-verify: true
-    network: tcp
-  - &id016
-    name: 🇨🇳_CN_中国->🇺🇸_US_美国_2
-    type: trojan
-    server: 36.151.195.48
-    port: 4787
-    udp: true
-    password: TNDSJfNv
-    skip-cert-verify: true
-    network: tcp
-  - &id017
-    name: 🇺🇸_US_美国_8
-    type: ss
-    server: 184.170.241.194
-    port: 443
-    password: shadowsocks
-    cipher: aes-128-cfb
-  - &id018
-    name: 🇺🇸_US_美国_9
-    type: ss
-    server: 34.208.170.155
-    port: 443
-    password: amazonskr05
-    cipher: aes-256-cfb
-  - &id019
-    name: 🇺🇸_US_美国->🇸🇬_SG_新加坡
+    name: 🇺🇸_US_美国_6
     type: vmess
-    server: cfcdn2.sanfencdn9.com
-    port: 2052
+    server: Tgju.org
+    port: 2095
     cipher: auto
-    uuid: ccd92698-4499-472d-a06f-f90e7e89ba4f
+    uuid: c8c1e652-fe34-4e04-879f-fea8940d7980
     alterId: 0
     tls: false
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: /video/3YKfzGw4
+      path: /
       headers:
-        host: rpmlybgzsg2.yofnhkfc.xyz
-  - &id020
-    name: 🇨🇳_CN_中国->🇺🇸_US_美国_3
-    type: trojan
-    server: 36.151.195.48
-    port: 4603
-    udp: true
-    password: TNDSJfNv
-    skip-cert-verify: true
-    network: tcp
-  - &id021
-    name: 🇺🇸_US_美国_10
-    type: ss
-    server: 52.88.161.5
-    port: 443
-    password: amazonskr05
-    cipher: aes-256-cfb
-  - &id022
-    name: 🇺🇸_US_美国_11
-    type: ss
-    server: 35.94.178.238
-    port: 443
-    password: amazonskr05
-    cipher: aes-256-cfb
-  - &id023
-    name: 🇺🇸_US_美国_12
+        host: Asdfghjkl10.unique69.com
+  - &id016
+    name: 🇷🇺_RU_俄罗斯联邦_1
     type: vmess
-    server: 23.154.136.2
-    port: 443
+    server: 45.136.245.240
+    port: 12910
     cipher: auto
-    uuid: 03fcc618-b93d-6796-6aed-8a38c975d581
+    uuid: 8259cb1c-dd6c-4739-9c88-af550d977525
     alterId: 0
     tls: true
     skip-cert-verify: true
+    servername: 22.lwdh.us
     network: ws
     ws-opts:
-      path: /linkvws
-  - &id024
-    name: 🇺🇸_US_美国->🇫🇷_FR_法国_2
+      path: /
+  - &id017
+    name: 🇷🇺_RU_俄罗斯联邦_2
     type: vmess
-    server: 172.67.130.140
-    port: 2082
+    server: 45.147.200.170
+    port: 13964
     cipher: auto
-    uuid: 112ac36f-3f53-4e26-8371-d25c028e1b9a
+    uuid: 2cd0f258-d8cf-4c56-a5ec-5e400c1bbde8
     alterId: 0
     tls: false
     skip-cert-verify: true
     network: ws
     ws-opts:
       path: /
-      headers:
-        host: s1c.v2.v001sss.xyz
-  - &id025
-    name: 🇺🇸_US_美国->🇫🇷_FR_法国_3
-    type: vmess
-    server: s1c.v2.v001sss.xyz
-    port: 2082
-    cipher: auto
-    uuid: 112ac36f-3f53-4e26-8371-d25c028e1b9a
-    alterId: 0
-    tls: false
+  - &id018
+    name: 🇫🇷_FR_法国
+    type: trojan
+    server: 15.236.14.65
+    port: 22222
+    udp: true
+    password: telegram-id-privatevpns
+    sni: trojan.burgerip.co.uk
     skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: s1c.v2.v001sss.xyz
-  - &id026
-    name: 🇺🇸_US_美国_13
-    type: vmess
-    server: russia.com
-    port: 8080
-    cipher: auto
-    uuid: 4b05abf5-c68d-4ffc-915f-add2f3786dca
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /api/v3/download.getFile
-      headers:
-        host: sssub.v2.001.ssrsub.com
+    network: tcp
+    alpn:
+      - http/1.1
 proxy-groups:
   - name: PROXY
     type: select
@@ -353,14 +306,6 @@ proxy-groups:
       - *id016
       - *id017
       - *id018
-      - *id019
-      - *id020
-      - *id021
-      - *id022
-      - *id023
-      - *id024
-      - *id025
-      - *id026
   - name: LOAD-BALANCE
     type: load-balance
     url: http://www.gstatic.com/generate_204
@@ -384,14 +329,6 @@ proxy-groups:
       - *id016
       - *id017
       - *id018
-      - *id019
-      - *id020
-      - *id021
-      - *id022
-      - *id023
-      - *id024
-      - *id025
-      - *id026
   - name: SELECT
     type: select
     proxies:
@@ -413,14 +350,6 @@ proxy-groups:
       - *id016
       - *id017
       - *id018
-      - *id019
-      - *id020
-      - *id021
-      - *id022
-      - *id023
-      - *id024
-      - *id025
-      - *id026
 rules:
   - RULE-SET,applications,DIRECT
   - DOMAIN,clash.razord.top,DIRECT
